# resonance

./: README.md  setup.cfg
resonance/: backend.py  dsp.py  figures.py  memory.py  potentiostats.py  pressure.py  resonance.py  resostat.py  utils.py
tests/: test_potentiostats.py  test_pressure.py
