[metadata]
name = resonance
version = 0.0.1
author = Gunnar Thorsteinsson
author_email = gunnarthorsteins@outlook.com
description = For acoustic resonance analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/steingartlab/resonance
project_urls =
    Bug Tracker = https://github.com/steingartlab/resonance/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = resonance
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src